Looking to fix overlap bug with mobile nav

--- a/_sass/custom/_site-header.scss
+++ b/_sass/custom/_site-header.scss
@@ -37,8 +37,10 @@
 }
 
 .site-nav {
+    position: relative;
     @include relative-font-size(1.6);
     line-height: $base-line-height * $base-font-size * 2.25;
+    z-index: 10;
 
     .nav-trigger {
         display: none;
